@@ -20,11 +20,35 @@ public class StringUtilTest {
     }
 
     @Test public void padding() {
-        assertEquals("", StringUtil.padding(0));
-        assertEquals(" ", StringUtil.padding(1));
-        assertEquals("  ", StringUtil.padding(2));
-        assertEquals("               ", StringUtil.padding(15));
-        assertEquals("                              ", StringUtil.padding(45)); // we tap out at 30
+        // memoization is up to 21 blocks (0 to 20 spaces) and exits early before min checks making maxPaddingWidth unused
+        assertEquals("", StringUtil.padding(0, -1));
+        assertEquals("                    ", StringUtil.padding(20, -1));
+
+        // this test escapes memoization and continues through
+        assertEquals("                     ", StringUtil.padding(21, -1));
+
+        // this test escapes memoization and using unlimited length (-1) will allow requested spaces
+        assertEquals("                              ", StringUtil.padding(30, -1));
+        assertEquals("                                             ", StringUtil.padding(45, -1));
+
+        // we tap out at 0 for this test
+        assertEquals("", StringUtil.padding(0, 0));
+
+        // we tap out at 5 for this test because we do not escape memoization
+        assertEquals("     ", StringUtil.padding(5, 0));
+
+        // as memoization is escaped, setting zero for max padding will not allow any requested width
+        assertEquals("", StringUtil.padding(21, 0));
+
+        // we tap out at 30 for these tests making > 30 use 30
+        assertEquals("", StringUtil.padding(0, 30));
+        assertEquals(" ", StringUtil.padding(1, 30));
+        assertEquals("  ", StringUtil.padding(2, 30));
+        assertEquals("               ", StringUtil.padding(15, 30));
+        assertEquals("                              ", StringUtil.padding(45, 30));
+
+        // Testing deprecated version capped at 30
+        assertEquals("                              ", StringUtil.padding(45));
     }
 
     @Test public void paddingInACan() {
